# Cut_app

./: .gitignore  main.py  main_new.py  pyproject.toml  test.py
src/: package.py  part.py  rectangle.py  sheet.py  stack.py
