[tool.poetry]
name = "cut-app"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <111972238+MaksymBratsiun@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cut_app"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
pip = "^24.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
